infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ambar
  labels:
    app.kubernetes.io/name: ambar
